# embedding_test

./: README.md  pyproject.toml
